# WildFoxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md  imgui.ini
assets/configs/: materials.json  shaders.json
assets/objects/: imgui.ini
assets/objects/fox/: baller_fox_reduxno_clothes.mtl
assets/objects/teto_pear/: teto_pear.mtl
assets/objects/voicepeak_teto_plush/: voicepeak_teto_plush.mtl
assets/scripts/: camera_follow.as  controller.as  door.as  rotation.as  test_audioScript.as
assets/shaders/: shaders.json
assets/shaders/fragment/: alpha.fs  basic.fs  basic.fsh  blinn-fong.fs  debug_quad.fs  depth.fs  grid.fs  icon.fs  lamp.fs  normal_mapping.fs  parallax.fs  point_shadow.fs  point_shadow_depth.fs  shadowCubeMapDepth.fsh  shadow_mapping.fs
assets/shaders/geometry/: shadowCubeMapDepth.gsh
assets/shaders/vertex/: aabbDebug.vs  basic.vs  basic.vsh  grid.vs  grid.vsh  icon.vs  (+4 more)
docs/: Doxyfile
docs/html/: Application_8cppm.html  Application_8cppm.js  Application_8cppm__incl.map  Application_8cppm__incl.md5  Camera_8cppm.html  Camera_8cppm.js  Camera_8cppm__incl.map  Camera_8cppm__incl.md5  CommandManager_8cppm.html  CommandManager_8cppm.js  CommandManager_8cppm__incl.map  CommandManager_8cppm__incl.md5  Components_8cppm.html  Components_8cppm__incl.map  Components_8cppm__incl.md5  ConsoleLogger_8cppm.html  ConsoleLogger_8cppm.js  ConsoleLogger_8cppm__incl.map  ConsoleLogger_8cppm__incl.md5  ConsoleWindow_8cppm.html  ConsoleWindow_8cppm.js  ConsoleWindow_8cppm__incl.map  ConsoleWindow_8cppm__incl.md5  EditorLayout_8cppm.html  EditorLayout_8cppm.js  EditorLayout_8cppm__incl.map  EditorLayout_8cppm__incl.md5  Engine_8cppm.html  Engine_8cppm.js  Engine_8cppm__dep__incl.map  Engine_8cppm__dep__incl.md5  Engine_8cppm__incl.map  Engine_8cppm__incl.md5  Engine_8cppm_source.html  FileLogger_8cppm.html  FileLogger_8cppm.js  FileLogger_8cppm__incl.map  FileLogger_8cppm__incl.md5  ForwardPipeline_8cppm.html  ForwardPipeline_8cppm.js  (+1621 more)
docs/latex/: Application_8cppm.tex  Application_8cppm__incl.md5  Camera_8cppm.tex  Camera_8cppm__incl.md5  CommandManager_8cppm.tex  CommandManager_8cppm__incl.md5  Components_8cppm.tex  Components_8cppm__incl.md5  ConsoleLogger_8cppm.tex  ConsoleLogger_8cppm__incl.md5  ConsoleWindow_8cppm.tex  ConsoleWindow_8cppm__incl.md5  EditorLayout_8cppm.tex  EditorLayout_8cppm__incl.md5  Engine_8cppm.tex  Engine_8cppm__dep__incl.md5  Engine_8cppm__incl.md5  Engine_8cppm_source.tex  FileLogger_8cppm.tex  FileLogger_8cppm__incl.md5  ForwardPipeline_8cppm.tex  ForwardPipeline_8cppm__incl.md5  Framebuffer_8cppm.tex  Framebuffer_8cppm__incl.md5  GLContext_8cppm.tex  GLContext_8cppm__incl.md5  GeometryPass_8cppm.tex  GeometryPass_8cppm__incl.md5  HierarchyWindow_8cppm.tex  HierarchyWindow_8cppm__incl.md5  IconPanel_8cppm.tex  IconPanel_8cppm__incl.md5  IconRenderSystem_8cppm.tex  IconRenderSystem_8cppm__incl.md5  Icon_8cppm.tex  Icon_8cppm__incl.md5  ImGuiManager_8cppm.tex  ImGuiManager_8cppm__incl.md5  IndexBuffer_8cppm.tex  IndexBuffer_8cppm__incl.md5  (+614 more)
includes/: Engine.h
includes/UI/: EditorLayout.h
includes/application/: Application.h
includes/core/: Camera.h  Input.h  Shader.h  Time.h  Window.h  camera.hpp
includes/rendering/: Buffer.h  GPUMesh.h  Material.h  MeshData.h  Primitives.h  Renderer.h  Skybox.h
includes/scene/: Mesh.h  Model.h  SceneManager.h  Transform.h  mesh.hpp  model.hpp
includes/utils/: Logger.h
old/src/: main.cpp
scripts/: controller.as  cube_controller.lua  rotate.lua  simple_rotation.lua
shaders/fragment/: light.fs
src/: Engine.cpp  Engine.cppm  camera.cpp  glm_fix.h  imgui.ini  main.cpp
src/ECS/: Components.cppm  ECSModule.cpp  ECSModule.cppm  ECSModule.h  ECSWorld.cppm  Systems.cppm  World.cpp  World.cppm  World.h
src/UI/: DebugOverlay.cpp  DebugOverlay.cppm  DebugOverlay.h  EditorLayout.cpp  EditorLayout.cppm  ImGuiManager.cpp  ImGuiManager.cppm  ImGuiManager.h  Theme.cppm  Theme.h  UIModule.cpp  UIModule.cppm  UIModule.h
src/application/: Application.cpp  Application.cppm  Application.h
src/core/: Camera.cppm  Camera.h  CommandManager.cpp  CommandManager.cppm  CommandManager.h  EventBus.cpp  EventBus.cppm  EventBus.h  IModule.cpp  IModule.cppm  IModule.h  ImGuiManager.cpp  ImGuiManager.cppm  ImGuiManager.h  Input.cpp  Input.cppm  Input.h  ModuleManager.cpp  ModuleManager.cppm  ModuleManager.h  Shader.cppm  Shader.h  Time.cpp  Time.cppm  Time.h  Window.cpp  Window.cppm  Window.h  camera.cpp  shader.cpp
src/editor/: CameraController.cppm  EditorCommands.cppm
src/engine/: Engine.cpp  Engine.cppm  Engine.h  EngineCommandHandler.cpp  EngineCommandHandler.cppm  EngineCommandHandler.h
src/ext/: angelscript.hpp  entt.cppm  gl.hpp  glm.hpp  imgui.hpp  stdlib.hpp
src/physics/: PhysicsModule.cpp  PhysicsModule.cppm  PhysicsModule.h
src/rendering/: Buffer.cpp  Buffer.cppm  Framebuffer.cpp  Framebuffer.cppm  Framebuffer.h  GPUMesh.cppm  GPUmesh.cpp  Grid.cppm  IRenderer.cppm  IRenderer.h  Light.cppm  Material.cpp  Material.cppm  MeshData.cppm  MeshData.h  MeshRenderer.cpp  MeshRenderer.cppm  MeshRenderer.h  Primitives.cpp  RenderQueue.cppm  RenderStats.cppm  Renderer.cpp  Renderer.cppm  Renderer.h  RenderingModule.cpp  RenderingModule.cppm  RenderingModule.h  RenderingTypes.cppm  RenderingTypes.h  Skybox.cpp  Skybox.cppm  TextureManager.cpp  TextureManager.cppm  TextureManager.h
src/resource/: ResourceModule.cpp  ResourceModule.cppm  ResourceModule.h
src/runtime/: GameRuntime.cppm
src/scene/: Light.cppm  Light.h  Mesh.cpp  Mesh.cppm  Mesh.h  Model.cpp  Model.cppm  SceneManager.cpp  SceneManager.cppm  SceneManager.h  SceneManger.cpp  SceneModule.cpp  SceneModule.cppm  SceneModule.h  SceneSerializer.cppm  SceneSurializer.cppm  Skybox.cpp  Skybox.cppm  Skybox.h  Transform.cppm  Trasnform.cpp  mesh.cpp  model.cpp
src/scripting/: ASBindings.cppm  ASBindings.h  ASRegisterAPI.cppm  ASState.cpp  ASState.cppm  ASState.h  LuaBindings.cppm  LuaRegisterAPI.cppm  LuaState.cppm  LuaWorldAPI.cppm  LuaWorldApi.cpp
src/utils/: Logger.cpp  Logger.cppm  Logger.h  split_header.py  stats.sh
(+402 files in other folders)
